Implement Domain ID New Control Center GUI Remove redundant Position Estimate feature

--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ task distSrcZip(type: Zip) {
   includes << 'openTCS-*/**'
   includes << 'src/**'
   includes << '.nb-gradle-properties'
+  includes << 'LICENSE'
   includes << '*.gradle'
   includes << 'gradlew'
   includes << 'gradlew.bat'
