--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -31,14 +31,15 @@ repositories {
 }
 
 dependencies {
-  compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
-  compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21', classifier: 'javadoc'
+  compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+//  compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21', classifier: 'javadoc'
+//  compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
 
   compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
   compile group: 'com.google.guava', name: 'guava', version: '19.0'
   compileOnly group: 'com.google.guava', name: 'guava', version: '19.0', classifier: 'sources'
 
-  testCompile group: 'junit', name: 'junit', version: '4.12'
+  testCompile group: 'junit', name: 'junit', version: '4.13.1'
   testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
   testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
 }
