Remove reference to BinTray that has ceased services. Add dependency for geometry.

--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -25,9 +25,7 @@ ext {
   
 repositories {
   jcenter()
-  maven {
-    url 'https://dl.bintray.com/ihmcrobotics/maven-release'
-  }
+  mavenCentral()
 }
 
 dependencies {
